--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "cssnow",
-  "version": "2.3.0",
+  "name": "css-now",
+  "version": "2.4.0",
   "description": "Sort of like cssnext used to be",
   "main": "./index.js",
   "scripts": {
     "test": "mocha --reporter spec --bail"
   },
   "bin": {
-    "cssnow": "./cli.js"
+    "css-now": "./cli.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/scienceai/cssnow.git"
+    "url": "https://github.com/darobin/css-now.git"
   },
   "keywords": [
-    "cssnow",
+    "css-now",
     "CSS",
     "preprocessor",
     "PostCSS",
@@ -23,9 +23,9 @@
   "author": "Robin Berjon <robin@berjon.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/scienceai/cssnow/issues"
+    "url": "https://github.com/darobin/css-now/issues"
   },
-  "homepage": "https://github.com/scienceai/cssnow",
+  "homepage": "https://github.com/darobin/css-now",
   "devDependencies": {
     "mocha": "^3.2.0",
     "shortid": "^2.2.6"
