--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   "homepage": "https://github.com/darobin/css-now",
   "devDependencies": {
     "mocha": "^3.2.0",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.13"
   },
   "dependencies": {
-    "commander": "2.9.0",
+    "commander": "^2.18.0",
     "cssnano": "^3.10.0",
-    "npm-path": "^2.0.3",
+    "npm-path": "^2.0.4",
     "once": "^1.4.0",
     "postcss": "^5.2.15",
     "postcss-browser-reporter": "^0.5.0",
