--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "https://github.com/darobin/css-now.git"
   },
+  "eslintConfig": {
+    "extends": "robin"
+  },
   "keywords": [
     "css-now",
     "CSS",
@@ -39,8 +42,8 @@
     "postcss": "^7.0.2",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cli": "^6.0.0",
-    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.0",
+    "postcss-preset-env": "^5.3.0",
     "postcss-reporter": "^6.0.0",
     "postcss-url": "^8.0.0"
   }
