--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-import": "^12.0.0",
     "postcss-preset-env": "^5.3.0",
     "postcss-reporter": "^6.0.0",
-    "postcss-url": "^8.0.0"
+    "postcss-url": "^8.0.0",
+    "uniq": "^1.0.1"
   }
 }
